--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -3,9 +3,17 @@
     text-decoration: none;
     padding: 12px;
     font-weight: 700;
-    color: #2a363b;
+    color: #2a363b;   
   }
   
-  .link.active {
+.link:hover  {
+    color: #e7d915;
+  }
+  
+.link:focus  {
+      color: #e84a5f;
+    }
+
+.link:active {
     color: #e84a5f;
   }
