--- a/src/components/UserMenu/UserMenu.module.css
+++ b/src/components/UserMenu/UserMenu.module.css
@@ -1,9 +1,30 @@
 .wrapper {
     display: flex;
     align-items: center;
-    gap: 12px;
+    gap: 10px;
   }
   
   .username {
     font-weight: 700;
+    font-size: 18px;
   }
+
+  .button {
+    width: 80px;
+    height: 20px;
+    margin-left: 10px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    font-size: 12px;
+    line-height: calc(14/12);
+    text-align: center;
+    letter-spacing: 0.06em;
+    cursor: pointer;
+    border: 1px solid rgba(33, 33, 33, 0.8);
+    border-radius: 4px;
+}
+
+.button:hover, 
+.button:focus {
+    background-color: #c4d2dd;
+}
